# ida_ipython

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ReadMe.md  kernel.json.template  launch_ida.py  releasezip.py
lib/MinHook_13_lib/: readme.txt
lib/MinHook_13_lib/lib/: libMinHook-x64-v100-md.lib  libMinHook-x64-v100-mdd.lib  libMinHook-x64-v100-mtd.lib  libMinHook-x64-v110-md.lib  libMinHook-x64-v110-mdd.lib  libMinHook-x64-v110-mt.lib  libMinHook-x64-v110-mtd.lib  libMinHook-x64-v120-md.lib  libMinHook-x64-v120-mdd.lib  libMinHook-x64-v120-mt.lib  libMinHook-x64-v120-mtd.lib  libMinHook-x64-v90-md.lib  libMinHook-x64-v90-mdd.lib  libMinHook-x64-v90-mt.lib  libMinHook-x64-v90-mtd.lib  libMinHook-x86-v100-md.lib  libMinHook-x86-v100-mdd.lib  libMinHook-x86-v100-mtd.lib  libMinHook-x86-v110-md.lib  libMinHook-x86-v110-mdd.lib  libMinHook-x86-v110-mt.lib  libMinHook-x86-v110-mtd.lib  libMinHook-x86-v120-md.lib  libMinHook-x86-v120-mdd.lib  libMinHook-x86-v120-mt.lib  libMinHook-x86-v120-mtd.lib  libMinHook-x86-v90-md.lib  libMinHook-x86-v90-mdd.lib  libMinHook-x86-v90-mt.lib  libMinHook-x86-v90-mtd.lib
notebook/: idakernelmanager.py
notebook/.jupyter-ida/: jupyter_notebook_config.py
notebook/examples/: Cython and IDA.ipynb  Function Entropy.ipynb  Sark Snapshots.ipynb
notebook/kernels/ida32/: kernel.json
notebook/kernels/ida64/: kernel.json
notebook/profile_ida/: history.sqlite  ipython_config.py  ipython_notebook_config.py  ipython_qtconsole_config.py
notebook/profile_ida/db/: dhist
plugin/: ida_ipython.py
python/: ipythonEmbed.py
src/: ida_ipython.cpp  ipythonEmbed.cpp  ipythonEmbed.h  persist.cpp  persist.h  proxy.py
